src/test/ui/did_you_mean/issue-41679-tilde-bitwise-negation-attempt.stderr
error: `~` cannot be used as a unary operator
  --> $DIR/issue-41679-tilde-bitwise-negation-attempt.rs:4:14
   |
LL |     let _x = ~1;
   |              ^ help: use `!` to perform bitwise not

error: unexpected `1` after identifier
  --> $DIR/issue-41679-tilde-bitwise-negation-attempt.rs:5:18
   |
LL |     let _y = not 1;
   |              ----^
   |              |
   |              help: use `!` to perform bitwise not

error: aborting due to 2 previous errors

